# bolster

./: .gitignore  CMakeLists.txt  CouchDB.cc  CouchDB.hh  DesktopCouch.cc  DesktopCouch.hh  GDBusWrapper.hh  IWebBackend.hh  Json.cc  Json.hh  Makefile.am  OAuth.cc  OAuth.hh  OAuthClient.cc  OAuthClient.hh  OAuthException.hh  Secrets.cc  Secrets.hh  StringUtil.cc  StringUtil.hh  TODO  UbuntuCouch.cc  UbuntuCouch.hh  UbuntuOneCouch.cc  UbuntuOneCouch.hh  UbuntuOneSSO.cc  UbuntuOneSSO.hh  WebBackendException.hh  WebBackendSoup.cc  WebBackendSoup.hh  config.h.cmake  configure.ac  main.cc
include/: CouchDBFactory.hh  Database.hh  Document.hh  FunctionWrappers.hh  ICouchDB.hh  Json.hh  Makefile.am  Registry.hh  Variant.hh
src/: CMakeLists.txt  CouchDB.cc  CouchDB.hh  CouchDBFactory.cc  Database.cc  DesktopCouch.cc  DesktopCouch.hh  DesktopCouchDBus.cc  DesktopCouchDBus.hh  Document.cc  DropboxAuth.cc  DropboxAuth.hh  Exception.hh  GDBusWrapper.cc  GDBusWrapper.hh  GoogleAuth.cc  GoogleAuth.hh  HttpBackendException.hh  HttpBackendSoup.cc  HttpBackendSoup.hh  HttpDecorator.hh  HttpExecuteSoup.cc  HttpExecuteSoup.hh  HttpReply.cc  HttpReply.hh  HttpReplySoup.cc  HttpReplySoup.hh  HttpRequest.cc  HttpServerSoup.hh  IHttpBackend.hh  IHttpDecoratorFactory.hh  IHttpExecute.hh  IHttpFilter.hh  IHttpRequestFilter.hh  IHttpServer.hh  IWebBackend.hh  Json.cc  Json.hh  JsonException.hh  Makefile.am  (+24 more)
test/: CMakeLists.txt  CouchDBTests.cc  DatabaseTests.cc  JsonTests.cc  Makefile.am  Settings.cc  Settings.hh  TestUtils.cc  TestUtils.hh  dropbox.cc  google.cc  json.cc  main.cc  tests.cc  u1.cc  variant.cc  wraptest.cc
